# laerning-tool

./: .all-contributorsrc  .gitignore  CONTRIBUTING.md  Cargo.toml  Component-Flow.graphml  README.adoc  README.md  laerning-module.xsd
.github/ISSUE_TEMPLATE/: bug_report.md  dataset-issue.md  dataset-request.md  refactor.md
.github/workflows/: release.yml
api-server/: Cargo.toml
cli-tui/: Cargo.toml
cli-tui/cli-tui/: Cargo.toml
cli-tui/src/: component.rs  main.rs  root.rs
data/: millionaire-1.0.0.xml  sample-1.0.0.xml
datasets/: tagalog.json
engine/: Cargo.toml
engine/src/: dataset.rs  game.rs  lib.rs  main.rs
engine/src/api/: cli.rs  mod.rs
engine/src/api/dataset/: mod.rs
engine/src/api/game/: error.rs  game.rs  game_library.rs  mod.rs
engine/src/api/test/: mod.rs
engine/src/dataset/: mod.rs  test.rs
engine/src/repository/: dataset.rs  game.rs  mod.rs
engine/src/xml/: error.rs  mod.rs  module_browser_test.rs
frontend/: .gitignore  Cargo.toml  Dioxus.toml  README.adoc
frontend/public/: tailwind.css
frontend/src/: main.rs
frontend/src/api/: mod.rs
frontend/src/components/: button_component.rs  create_game_component.rs  mod.rs  question_component.rs
frontend/src/layout/: mod.rs
laerning-tool-egui/: Cargo.toml
laerning-tool-egui/src/: app.rs  main.rs  timeout_widget.rs  ui_answer.rs  ui_question.rs
src/: main.rs
src/api/: mod.rs
src/api/dataset/: mod.rs
src/api/game/: error.rs  game.rs  mod.rs
src/api/test/: mod.rs
src/repository/: dataset.rs  game.rs  mod.rs
src/xml/: error.rs  mod.rs  module_browser_test.rs
