[package]
name = "cli-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
laerning-tool = { path = "../engine" }
ratatui = "0.26.1"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
console-subscriber = "0.2.0"
tracing-subscriber = "0.3.18"
tui-logger = { version = "0.11.0", features = ["crossterm", "tracing", "tracing-subscriber"] }
log = "0.4.21"
