[package]
name = "laerning-tool"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "laerning_tool"
path = "src/lib.rs"

[[bin]]
name = "laerning-tool-api"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.73"
axum = "0.6.18"
axum-test = "14.2.2"
env_logger = "0.10.0"
hyper = { version = "0.14.27", features = ["http1"] }
log = "0.4.19"
scan_fmt = "0.2.6"
serde = { version = "1.0.171", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.103"
surrealdb = { version = "1.2.0", features = ["kv-mem"] }
tokio = { version = "1.29.1", features = ["macros"] }
tower-http = { version = "0.4.3", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.4", features = ["axum"] }
xml = "0.8.10"
