[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="laerning-tool-frontend"
path="src/main.rs"

[dependencies]
dioxus = "0.4.0"
dioxus-router = "0.4.1"
dioxus-web = "0.4.0"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["serde_json", "json"] }
serde = "1.0.183"
